tests/invalid_syntax/bad_program.f
PROG WRONG
INTEGER A
END
